@@ -83,7 +83,7 @@ importFrom(stats,.checkMFClasses,.getXlevels,anova,approx,as.formula,
 binomial,coef,contrasts,"contrasts<-",cooks.distance,cor,cov,
 delete.response,dbeta,dgamma,dnorm,dpois,fitted,formula,gaussian,glm,
 influence,logLik,lm,mad,
-make.link,median,model.frame,model.offset,model.matrix,nlm,
+make.link,median,model.frame,model.offset,model.matrix,na.action,nlm,
 na.pass,napredict,na.omit,naresid,optim,pchisq,pnorm,pt,pf,
 power,predict,printCoefmat,quantile,
 qbeta,qbinom,qcauchy,qchisq,qnbinom,qgamma,qnorm,qpois,qqline,qqnorm,qqplot,
