@@ -20,7 +20,7 @@ for factor smooth interactions (including interactions of tensor product smooths
 
 \arguments{ 
 \item{object}{For the \code{smooth.construct} method a smooth specification object, 
-usually generated by a term \code{s(x,...,bs="fs",)}. For the \code{predict.Matrix} method 
+usually generated by a term \code{s(x,...,bs="fs",)}. May have a \code{gamm} attribute: see details. For the \code{predict.Matrix} method 
 an object of class \code{"fs.interaction"} produced by the \code{smooth.construct} method.}
 
 \item{data}{a list containing just the data (including any \code{by} variable) required by this term, 
@@ -30,7 +30,7 @@ an object of class \code{"fs.interaction"} produced by the \code{smooth.construc
 
 }
 
-\value{ An object of class \code{"fs.interaction"} or a matrix mapping the coefficients of the factor smooth interaction to the smooths themselves.
+\value{ An object of class \code{"fs.interaction"} or a matrix mapping the coefficients of the factor smooth interaction to the smooths themselves. The contents of an \code{"fs.interaction"} object will depend on whether or not \code{smooth.construct} was called with an object with attribute \code{gamm}: see below.
 }
 
 \details{This class produces a smooth for each level of a single factor variable. Within a \code{\link{gam}} 
@@ -42,10 +42,13 @@ The class is particularly useful for use with \code{\link{gamm}}, where estimati
 the nesting of the smooth within the factor. Note however that: i) \code{gamm} only allows one conditioning 
 factor for smooths, so \code{s(x)+s(z,fac,bs="fs")+s(v,fac,bs="fs")} is OK, but \code{s(x)+s(z,fac1,bs="fs")+s(v,fac2,bs="fs")}
 is not; ii) all aditional random effects and correlation structures will be treated as nested within the factor
-of the smooth factor interaction.
+of the smooth factor interaction. To facilitate this the constructor is called from \code{\link{gamm}} with an attribute
+\code{"gamm"} attached to the smooth specification object. The result differs from that resulting from the case where this is
+not done. 
 
 Note that \code{gamm4} from the {\code{gamm4}} package suffers from none of the restrictions that apply to \code{gamm}, and
-\code{"fs"} terms can be used without side-effects. 
+\code{"fs"} terms can be used without side-effects. Construcor is still called with a smooth specification object having a
+\code{"gamm"} attribute.
 
 Any singly penalized basis can be used to smooth at each factor level. The default is \code{"tp"}, but alternatives can 
 be supplied in the \code{xt} argument of \code{s} (e.g. \code{s(x,fac,bs="fs",xt="cr")} or 
